# kreqo

./: .env  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-1ea4a3f1d8f72d6aa47e63a6b10518dd2961b8f6e72189105959ad8cd065702f.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-46cced5ef72ee42127c3e892f22b7bac0f5e82ea382d422115ab5d52660b8526.json  query-53d1f8f4dd65c0f74e058adc2c69c0610a3bf472d6df2cf927282e16d900f95b.json  query-58327aa90726e98d2f31a5178c611b22b3177ea71f812c9f53e4164f22cd1f8a.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-7b9e290b573c60081882ba3484e48d91b0630f9f36ef4ea01a58ef9af37a4461.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-bdc63a2b6621293d4559832fb28a5bd3eb316ce9fc4902e985c6ddf88850ac86.json  query-c0f27e55a1d15bf5d50cf692ed38e3299fab99554ce0dcfc6aa2791a3b56acb9.json  query-fa949e4cabae53f3ef84b563899517e41415c523f00a1e6c6bd0489a54a347d5.json
apps/learn/: Cargo.toml
apps/learn/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: database.rs  errors.rs  lib.rs  users.rs
core/src/users/: permissions.rs  roles.rs
server/: Cargo.toml
server/migrations/: 20251202033116_create_database.sql
server/src/: api.rs  context.rs  database.rs  lib.rs  main.rs
server/src/custom_client/: client.rs  request.rs  response.rs
server_fn_macro_default/: Cargo.toml
server_fn_macro_default/src/: lib.rs
src/: lib.rs
tests/: Cargo.toml  ci.rs
ui/: Cargo.toml
ui/src/: auth_forms.rs  class.rs  component.rs  lib.rs  pending.rs  theme.rs  user_list.rs
ui/src/component/: error.rs  form.rs  list.rs
ui/src/component/list/: filter.rs  sorter.rs  storage.rs  user_item.rs
