[workspace]
resolver = "3"
members = ["apps/learn", "core", "server", "server_fn_macro_default", "ui"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
rs-fsrs = "1.2"
serde = { version = "1.0", features = ["derive"] }
server_fn = { version = "0.8", features = ["axum", "reqwest"] }
server_fn_macro = { version = "0.8", features = ["axum", "reqwest"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xilem = { git = "https://github.com/linebender/xilem" }
