[package]
name = "kreqo-core"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum_session_auth.workspace = true
chrono.workspace = true
serde.workspace = true
server_fn.workspace = true
sqlx.workspace = true
thiserror.workspace = true
