[package]
name = "kreqo-server"
version = "0.0.0"
edition.workspace = true

[features]
ssr = ["server_fn/ssr", "server_fn_macro_default/ssr"]

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
server_fn = { workspace = true, default-features = false }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

kreqo-core = { path = "../core" }
server_fn_macro_default = { path = "../server_fn_macro_default", default-features = false }
