[package]
name = "server_fn_macro_default"
version = "0.0.0"
edition.workspace = true

[lib]
proc-macro = true

[features]
ssr = ["server_fn/ssr", "server_fn_macro/ssr"]

[dependencies]
server_fn = { workspace = true }
server_fn_macro = { workspace = true }
syn = { workspace = true, default-features = true }
