[package]
name = "kreqo-ui"
version = "0.0.0"
edition.workspace = true

[dependencies]
parley.workspace = true
rapidfuzz.workspace = true
server_fn.workspace = true
thiserror.workspace = true
uuid.workspace = true
xilem.workspace = true
zxcvbn.workspace = true

kreqo-core.workspace = true
kreqo-server.workspace = true
